EDU-665 Correct overflow value

--- a/src/components/files-upload-overview.less
+++ b/src/components/files-upload-overview.less
@@ -29,7 +29,7 @@
 
 .FilesUploadOverview-fileStatusContainer {
   max-height: 70%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .FilesUploadOverview-fileStatusIcon {
